Fix button link style that was causing dark mode button to act up on basic_index.html

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -39,6 +39,10 @@ a {
 
 }
 
+.darkMode .header-button-select {
+  background-color: #000000;
+}
+
 
 .darkMode .header-button-select {
   border: 1px solid #ffffff;
